Add HttpUrlConnection Client implementation + tests